unpackaged/main/default/objects/pro_Purchase_Order__c/pro_Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>JP 21/06/2023 - Updates to Object name 
JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Purchase Order - Overhead</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order - Overhead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>