unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_AP_Total__c.field-meta.xml
<CustomField>
    <fullName>pro_AP_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>AP Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>