unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Approval_Amount__c</fullName>
    <formula>pro_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>