unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>pro_Billing_Country__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>