unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>pro_Currency_Conversion_Rate__c</fullName>
    <description>JP 12/07/2023 - Created by Prodigy</description>
    <label>Currency Conversion Rate</label>
    <precision>7</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>