unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Department_Approval__c.field-meta.xml
<CustomField>
    <fullName>pro_Department_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Department Approval</label>
    <type>Checkbox</type>
</CustomField>