unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Description__c.field-meta.xml
<CustomField>
    <fullName>pro_Description__c</fullName>
    <description>JP 15/03/2023 V1 - Created by Prodigy</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>