unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Email_Sent_To_Supplier__c.field-meta.xml
<CustomField>
    <fullName>pro_Email_Sent_To_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JP 16/03/2023 V1 - Created by Prodigy</description>
    <label>Email Sent To Supplier</label>
    <type>Checkbox</type>
</CustomField>