unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>pro_Job_Number__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Job Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>