unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Ledger_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Ledger_Amount__c</fullName>
    <description>JP 12/07/2023 - Created by Prodigy</description>
    <formula>pro_Total_Amount__c /  pro_Currency_Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>