unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Ledger_Lookup__c.field-meta.xml
<CustomField>
    <fullName>pro_Ledger_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Ledger (AS)</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipName>pro_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>