unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Ledger_Picklist__c.field-meta.xml
<CustomField>
    <fullName>pro_Ledger_Picklist__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Ledger</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pro_Accounting_Ledgers</valueSetName>
    </valueSet>
</CustomField>