unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_PO_Balance__c.field-meta.xml
<CustomField>
    <fullName>pro_PO_Balance__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <formula>pro_Total_Amount__c -  pro_AP_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>