unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_PO_Format_Phone__c.field-meta.xml
<CustomField>
    <fullName>pro_PO_Format_Phone__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <formula>pro_Ledger_Lookup__r.AcctSeed__Default_Purchase_Order_Format__r.pro_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Format Phone</label>
    <type>Text</type>
</CustomField>