unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Project__c.field-meta.xml
<CustomField>
    <fullName>pro_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JP 29/06/2023 - Created by Prodigy</description>
    <label>Project (AS)</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Purchase Orders - Overhead</relationshipLabel>
    <relationshipName>pro_Purchase_Orders_Overhead</relationshipName>
    <type>Lookup</type>
</CustomField>