unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Project_Lookup__c.field-meta.xml
<CustomField>
    <fullName>pro_Project_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JP 18/01/2024 - Created by Prodigy</description>
    <label>Project Lookup</label>
    <referenceTo>pro_Project_Lookup__c</referenceTo>
    <relationshipLabel>Purchase Order - Overhead</relationshipLabel>
    <relationshipName>Purchase_Order_Overhead</relationshipName>
    <type>Lookup</type>
</CustomField>