unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Purchase_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Purchase_Order_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Purchase Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>