unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Region__c.field-meta.xml
<CustomField>
    <fullName>pro_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JP 28/06/2023 - Created by Prodigy</description>
    <label>Region (AS)</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Purchase Orders - Overhead</relationshipLabel>
    <relationshipName>pro_Purchase_Orders_Overhead</relationshipName>
    <type>Lookup</type>
</CustomField>