unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>pro_Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Shipping Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.pro_Supplier_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>