unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>pro_Shipping_Postal_Code__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Shipping Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>