unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>pro_Shipping_State__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Shipping State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>