unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Status__c.field-meta.xml
<CustomField>
    <fullName>pro_Status__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>