unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>pro_Supplier_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>pro_Purchase_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>