unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Supplier_CC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>pro_Supplier_CC_Email_Address__c</fullName>
    <description>JP 22/05/2023 - Created by Prodigy</description>
    <label>Supplier CC Email Address</label>
    <type>Email</type>
</CustomField>