unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Supplier_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>pro_Supplier_Email_Address__c</fullName>
    <description>JP 16/03/2023 V1 - Created by prodigy</description>
    <label>Supplier Email Address</label>
    <type>Email</type>
</CustomField>