unpackaged/main/default/objects/pro_Purchase_Order__c/fields/pro_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Total_Amount__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Total Amount</label>
    <summarizedField>pro_Purchase_Order_Line__c.pro_Total_Amount__c</summarizedField>
    <summaryForeignKey>pro_Purchase_Order_Line__c.pro_Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>