unpackaged/main/default/objects/pro_Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pro_Supplier_Account__c</columns>
    <columns>pro_Ledger_Picklist__c</columns>
    <columns>pro_Total_Amount__c</columns>
    <columns>pro_PO_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>