unpackaged/main/default/objects/pro_Purchase_Order__c/listViews/Finance_pro_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>Finance_pro_Purchase_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance</label>
    <queue>Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>