unpackaged/main/default/objects/pro_Purchase_Order__c/listViews/pro_Approval_1Mil_pro_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>pro_Approval_1Mil_pro_Purchase_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval 1Mil</label>
    <queue>pro_Approval_1Mil</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>