unpackaged/main/default/objects/pro_Purchase_Order__c/listViews/pro_Prodigy_Admin_pro_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>pro_Prodigy_Admin_pro_Purchase_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Prodigy Admin</label>
    <queue>pro_Prodigy_Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>